style: fix menu items spacing

--- a/src/App.css
+++ b/src/App.css
@@ -163,9 +163,7 @@ button {
 }
 
 .floating-top-container {
-  position: fixed;
-  top: 20px;
-  width: 90%;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   border: 0;
@@ -197,7 +195,6 @@ button {
     opacity: 0.3;
   }
 }
-
 
 .leaderBtn {
   width: 132px;
